// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NavBar Snapshots should match snapshot when logged in 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": {
      "$$typeof": Symbol(react.transitional.element),
      "_owner": null,
      "_store": {},
      "key": null,
      "props": {
        "children": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {
            "children": [
              {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {},
                "type": [Function],
              },
              {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {},
                "type": [Function],
              },
              {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {
                  "children": [
                    {
                      "$$typeof": Symbol(react.transitional.element),
                      "_owner": null,
                      "_store": {},
                      "key": null,
                      "props": {
                        "viewportWidth": 1024,
                      },
                      "type": [Function],
                    },
                    {
                      "$$typeof": Symbol(react.transitional.element),
                      "_owner": null,
                      "_store": {},
                      "key": null,
                      "props": {},
                      "type": [Function],
                    },
                  ],
                  "className": "flex relative",
                },
                "type": "div",
              },
            ],
            "className": "relative flex h-15 items-center justify-between",
          },
          "type": "div",
        },
        "className": "px-4 md:px-6 lg:px-8",
      },
      "type": "div",
    },
    "className": "border-b border-gray-100",
  },
  "type": "nav",
}
`;

exports[`NavBar Snapshots should match snapshot when logged out 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": {
      "$$typeof": Symbol(react.transitional.element),
      "_owner": null,
      "_store": {},
      "key": null,
      "props": {
        "children": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {
            "children": [
              {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {},
                "type": [Function],
              },
              {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {},
                "type": [Function],
              },
              {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {
                  "children": [
                    {
                      "$$typeof": Symbol(react.transitional.element),
                      "_owner": null,
                      "_store": {},
                      "key": null,
                      "props": {
                        "viewportWidth": 1024,
                      },
                      "type": [Function],
                    },
                    {
                      "$$typeof": Symbol(react.transitional.element),
                      "_owner": null,
                      "_store": {},
                      "key": null,
                      "props": {},
                      "type": [Function],
                    },
                  ],
                  "className": "flex relative",
                },
                "type": "div",
              },
            ],
            "className": "relative flex h-15 items-center justify-between",
          },
          "type": "div",
        },
        "className": "px-4 md:px-6 lg:px-8",
      },
      "type": "div",
    },
    "className": "border-b border-gray-100",
  },
  "type": "nav",
}
`;

exports[`NavBar Snapshots should match snapshot with different viewport widths 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "children": {
      "$$typeof": Symbol(react.transitional.element),
      "_owner": null,
      "_store": {},
      "key": null,
      "props": {
        "children": {
          "$$typeof": Symbol(react.transitional.element),
          "_owner": null,
          "_store": {},
          "key": null,
          "props": {
            "children": [
              {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {},
                "type": [Function],
              },
              {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {},
                "type": [Function],
              },
              {
                "$$typeof": Symbol(react.transitional.element),
                "_owner": null,
                "_store": {},
                "key": null,
                "props": {
                  "children": [
                    {
                      "$$typeof": Symbol(react.transitional.element),
                      "_owner": null,
                      "_store": {},
                      "key": null,
                      "props": {
                        "viewportWidth": 768,
                      },
                      "type": [Function],
                    },
                    {
                      "$$typeof": Symbol(react.transitional.element),
                      "_owner": null,
                      "_store": {},
                      "key": null,
                      "props": {},
                      "type": [Function],
                    },
                  ],
                  "className": "flex relative",
                },
                "type": "div",
              },
            ],
            "className": "relative flex h-15 items-center justify-between",
          },
          "type": "div",
        },
        "className": "px-4 md:px-6 lg:px-8",
      },
      "type": "div",
    },
    "className": "border-b border-gray-100",
  },
  "type": "nav",
}
`;
